<resources>
    <string name="app_name">Lesson1</string>
    <string name="lol">Лол</string>
    <string name="hint_name">Имя</string>
    <string name="hint_email">Адрес электронной почты</string>
    <string name="email_caption">Email</string>
    <string name="hint_surname">Фамилия</string>
    <string name="pass_conf">Подтверждение пароля</string>
    <string name="pass">Пароль</string>
    <string name="reg">Регистрация</string>
    <string name="acc_exist_question">Уже есть аккаунт? Войти</string>
    <string name="kek">Кек</string>
    <string name="enter_que">Нет аккаунта? Зарегайся</string>
    <string name="enter">Войти</string>
</resources>